# cli-lite

./: .gitignore  README.md  README_ENG.md  example.py  pyproject.toml
clilte/: __init__.py  builtin.py  core.py  formatter.py  main.py
examples/: foo.py
examples/bar/: baz.py
litecli/: builtin.py
